<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <GVL Name="Grinder" Id="{8db0d846-cda3-4d2f-b655-d2a023459888}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	GrindingWheelMS:BOOL;
	GrindingWheelMS2:BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>